--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "dev": "vite",
     "tailwind:watch": "tailwindcss -i ./src/style.css -o ./dist/style.css --watch",
-    "dev": "vitew",
-    "build": "tsc && vite build",
+    "tailwind:build": "tailwindcss -i ./src/style.css -o ./dist/style.css --minify",
+    "build:npm": "npm run tailwind:build && tsc && vite build",
+    "build:yarn": "yarn run tailwind:build && tsc && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
